# mlflow-wine-quality

./: .gitignore  Dockerfile  MLproject  README.md  pyproject.toml
.github/workflows/: build.yml
tests/: test_model.py
wine_quality/: train.py
